# python-cmd-ui

./: pyproject.toml
cmd_ui/: control.py  interface.py
tests/: interface.py  start.py
